[project]
name = "sandbox-so101-win"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "lerobot",
    "lerobot[feetech]",
    "opencv-python>=4.12.0.88",
    "torch>=2.7.*, <2.8.0",
]

[tool.uv.sources]
torch = { index = "torch-cu128" }
lerobot = { git = "https://github.com/huggingface/lerobot", branch = "main" }

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
